# Tiktokbot

./: .env.example  .gitignore  README.md  RESOURCE_MANAGEMENT.md  check_runtime.py  config.txt  login.py  music_video_bot.py  requirements.txt  run.sh
tiktok-edit-upload/: check_runtime.py  music_video_bot.py  run.sh
tiktok-edit-upload/har_and_cookies/: .nodriver_is_open
tiktok-edit-upload/tiktok_uploader/: Config.py  __init__.py  cookies.py
tiktok-edit-upload/tiktok_uploader/tiktok-signature/: package-lock.json  package.json
tiktok-edit-upload/videogen/: beat_detection.py  gpt.py  music_video.py  tiktokvoice.py  video_effects.py
tiktok_uploader/: Browser.py  bot_utils.py  tiktok.py
video-clipper-app/: .env  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  start.sh
video-clipper-app/app/: _layout.tsx  index.tsx  processing.tsx  results.tsx
video-clipper-app/app/api/: clip+api.ts  (+2 more)
video-clipper-app/utils/: api.ts  config.ts
video-clipper-backend/: .gitignore  DEPLOYMENT.md  MIGRATION_ANALYSIS.md  README.md  package-lock.json  package.json  render.yaml  server.js  start.sh
video-clipper-backend-rust/: .gitignore  COMPARISON.md  CONFIG.md  Cargo.toml  Dockerfile  Makefile  QUICK_START.md  README.md  config.toml  docker-compose.yml  fly.toml  render.yaml  rust-toolchain.toml
video-clipper-backend-rust/src/: cleanup.rs  config.rs  ffmpeg.rs  handlers.rs  main.rs  models.rs  system_info.rs
videogen/: addMusic.py  music_video.py  research.py  resource_manager.py  utils.py  video.py  video_effects.py  viral_optimizer.py
(+1 files in other folders)
