[package]
name = "video-clipper-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "query"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling
multer = "3.0"
uuid = { version = "1.6", features = ["v4"] }

# System info
sysinfo = "0.30"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = { version = "0.3", features = ["stream"] }

# Path handling
pathdiff = "0.2"

# Body utilities
http-body-util = "0.1"
bytes = "1.5"

